--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: lightgray;
+    background-color: #f6f8f9;
 }
 
 header{
@@ -35,6 +35,7 @@ header h1{
 
 .add{
     background-color: white;
+    border-radius: 5px;
 }
 
 .add-task{
@@ -42,14 +43,14 @@ header h1{
     margin-top: 15px;
     margin-bottom: 10px;
     background-color:#47adf1;
-    padding: 7px;
+    padding: 7px 10px;
     border-radius: 5px;
     color: white;
     border: none;
 }
 
 .add-section{
-    padding: 7px;
+    padding: 7px 10px;
     border-radius: 5px;
     background-color: white;
     color: #ccd2d6;
@@ -61,6 +62,7 @@ header h1{
     background-color: white;
     padding-left: 50px;
     padding-top: 40px;
+    border-radius: 5px;
 }
 
 .check, .cross {
@@ -71,6 +73,7 @@ header h1{
     border-radius: 50%;
     text-align: center;
     line-height: 20px;
+    margin-right: 10px;
 }
 
 .check{
@@ -81,9 +84,11 @@ header h1{
     color: red;    
 }
 
+.list-task{
+    padding: 10px 0;
+}
 
 .task{
-    display: inline-block;
     padding: 10px 0;
 }
 
